--- a/game/styles.css
+++ b/game/styles.css
@@ -9,7 +9,10 @@ body {
     width: 100%;
     height: 5%;
     min-height: 64px;
-    background-color: #000000
+    background-color: #000000;
+    display: flex;
+    flex:1;
+    flex-direction: row;
 }
 
 .title h1 {
@@ -33,6 +36,19 @@ body {
     margin: auto;
     margin-top: 2.5%;
     margin-bottom: 2.5%;
+}
+
+.game-container{
+    display: flex;
+    flex:1;
+    flex-direction: column;
+}
+
+.game-list-container {
+    margin:2.5%;
+    padding-left: 2%;
+    background: #FAFAFA;
+    border-radius: 4px;
 }
 
 .awesome-table {
